--- a/.air.toml
+++ b/.air.toml
@@ -5,15 +5,15 @@ tmp_dir = "tmp"
 [build]
 args_bin = []
 bin = ""
-cmd = ""
+cmd = "go build -o tmp/main cmd/http/main.go"
 delay = 1000
-exclude_dir = []
+exclude_dir = ["tmp"]
 exclude_file = []
 exclude_regex = ["_test.go"]
 exclude_unchanged = false
 follow_symlink = false
 full_bin = ""
-include_dir = []
+include_dir = ["cmd", "internal"]
 include_ext = ["go"]
 kill_delay = "0s"
 log = "build-errors.log"
