--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,6 +4,9 @@ tasks:
   dev:
     cmds:
       - air
+  gen:
+    cmds:
+      - go generate
   build:
     - go build -o bin/http cmd/http/main.go
   start:
