--- a/.air.toml
+++ b/.air.toml
@@ -13,7 +13,7 @@ exclude_regex = ["_test.go"]
 exclude_unchanged = false
 follow_symlink = false
 full_bin = ""
-include_dir = ["cmd", "internal"]
+include_dir = ["cmd", "internal", "ent"]
 include_ext = ["go"]
 kill_delay = "0s"
 log = "build-errors.log"
