--- a/internal/gql/gqlgen.yml
+++ b/internal/gql/gqlgen.yml
@@ -5,7 +5,7 @@ schema:
 # resolver reports where the resolver implementations go.
 resolver:
   layout: follow-schema
-  dir: ./resolvers
+  dir: ./resolver
 
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
