--- a/.air.toml
+++ b/.air.toml
@@ -7,13 +7,13 @@ args_bin = []
 bin = ""
 cmd = "go build -o tmp/main cmd/http/main.go"
 delay = 1000
-exclude_dir = ["tmp"]
+exclude_dir = ["tmp", "bin"]
 exclude_file = []
 exclude_regex = ["_test.go"]
 exclude_unchanged = false
 follow_symlink = false
 full_bin = ""
-include_dir = ["cmd", "internal", "ent"]
+include_dir = ["cmd", "internal", "ent", "pkg"]
 include_ext = ["go"]
 kill_delay = "0s"
 log = "build-errors.log"
