(feat): add postgres to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.9"
 
 services:
-  heritage:
-    container_name: graphql
+  graphql:
+    container_name: graphql_server
     build:
       context: .
       dockerfile: ./docker/Dockerfile
@@ -16,3 +16,23 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       SSL_MODE: ${SSL_MODE}
       OPENID_CONNECT_USERINFO_ENDPOINT: ${OPENID_CONNECT_USERINFO_ENDPOINT}
+    depends_on:
+      - postgres
+    healthcheck:
+      test: ["CMD", "pg_isready", "-h", "postgres", "-U", "${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  postgres:
+    container_name: postgres_db
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+
+volumes:
+  pg_data:
