--- a/internal/gql/gqlgen.yml
+++ b/internal/gql/gqlgen.yml
@@ -1,5 +1,6 @@
 # schema tells gqlgen where the GraphQL schema is located.
 schema:
+  - mutation.graphql
   - ent.graphql
 
 # resolver reports where the resolver implementations go.
