(feat): change OPEN_ID... to OIDC... in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       SSL_MODE: ${SSL_MODE}
-      OPENID_CONNECT_USERINFO_ENDPOINT: ${OPENID_CONNECT_USERINFO_ENDPOINT}
+      OIDC_USERINFO_ENDPOINT: ${OIDC_USERINFO_ENDPOINT}
     depends_on:
       - postgres
 
