(feat): add redis config to .env, add POSTGRES_ prefix

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
-HOST=
-PORT=
+POSTGRES_HOST=
+POSTGRES_PORT=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
-SSL_MODE=
+POSTGRES_SSL_MODE=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
 OIDC_USERINFO_ENDPOINT=
