--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
     ports:
       - 4000:4000
     environment:
-      HOST: ${HOST}
-      PORT: ${PORT}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      SSL_MODE: ${SSL_MODE}
+      POSTGRES_SSL_MODE: ${POSTGRES_SSL_MODE}
       OIDC_USERINFO_ENDPOINT: ${OIDC_USERINFO_ENDPOINT}
     depends_on:
       - postgres
@@ -42,10 +42,12 @@ services:
     build:
       context: .
       dockerfile: ./docker/Dockerfile.redis
+    environment:
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
     ports:
       - 6379:6379
-    environment:
-      - ALLOW_EMPTY_PASSWORD=yes
 
 volumes:
   pg_data:
