--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,12 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
 POSTGRES_SSL_MODE=
+
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
+
 OIDC_USERINFO_ENDPOINT=
+
+MINIO_ROOT_USER=admin
+MINIO_ROOT_PASSWORD=changeme
