--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,5 +49,21 @@ services:
     ports:
       - 6379:6379
 
+  minio:
+    container_name: minio
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile.minio
+    ports:
+      - 9000:9000
+      - 9001:9001
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+    volumes:
+      - ./minio:/data
+    command: server --console-address :9001 /data
+
 volumes:
   pg_data:
+  minio:
