(feat): add minio client

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,13 @@ REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
 
-OIDC_USERINFO_ENDPOINT=
-
 MINIO_ROOT_USER=admin
 MINIO_ROOT_PASSWORD=changeme
+
+MINIO_ENDPOINT=
+MINIO_PORT=
+MINIO_ACCESS_KEY_ID=
+MINIO_SECRET_ACCESS_KEY=
+MINIO_USE_SSL=
+
+OIDC_USERINFO_ENDPOINT=
