--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,11 @@ services:
       OIDC_USERINFO_ENDPOINT: ${OIDC_USERINFO_ENDPOINT}
     depends_on:
       - postgres
+      - redis
+      - minio
 
   postgres:
-    container_name: postgres_db
+    container_name: heritage_postgres_db
     build:
       context: .
       dockerfile: ./docker/Dockerfile.postgres
@@ -39,6 +41,7 @@ services:
       retries: 5
 
   redis:
+    container_name: heritage_redis_db
     build:
       context: .
       dockerfile: ./docker/Dockerfile.redis
@@ -48,9 +51,14 @@ services:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
     ports:
       - 6379:6379
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   minio:
-    container_name: minio
+    container_name: heritage_minio
     build:
       context: .
       dockerfile: ./docker/Dockerfile.minio
