--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,8 @@ REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
 
-MINIO_ROOT_USER=admin
-MINIO_ROOT_PASSWORD=changeme
+MINIO_ROOT_USER=
+MINIO_ROOT_PASSWORD=
 
 MINIO_ENDPOINT=
 MINIO_PORT=
