--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.9"
 
 services:
-  graphql:
-    container_name: graphql_server
+  heritage_graphql:
+    container_name: heritage_graphql
     build:
       context: .
       dockerfile: ./docker/Dockerfile
     ports:
-      - 4000:4000
+      - 4000
     environment:
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: ${POSTGRES_PORT}
@@ -17,14 +17,14 @@ services:
       POSTGRES_SSL_MODE: ${POSTGRES_SSL_MODE}
       OIDC_USERINFO_ENDPOINT: ${OIDC_USERINFO_ENDPOINT}
     depends_on:
-      - postgres
-      - redis
+      - heritage_postgres
+      - heritage_redis
       - minio
     networks:
       - siberiana-network
 
-  postgres:
-    container_name: heritage_postgres_db
+  heritage_postgres:
+    container_name: heritage_postgres
     build:
       context: .
       dockerfile: ./docker/Dockerfile.postgres
@@ -33,9 +33,9 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - 5432:5432
+      - 5432
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD", "pg_isready", "-h", "postgres", "-U", "${POSTGRES_USER}"]
       interval: 10s
@@ -44,8 +44,8 @@ services:
     networks:
       - siberiana-network
 
-  redis:
-    container_name: heritage_redis_db
+  heritage_redis:
+    container_name: heritage_redis
     build:
       context: .
       dockerfile: ./docker/Dockerfile.redis
@@ -54,7 +54,7 @@ services:
       REDIS_PORT: ${REDIS_PORT}
       REDIS_PASSWORD: ${REDIS_PASSWORD}
     ports:
-      - 6379:6379
+      - 6379
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -63,17 +63,19 @@ services:
     networks:
       - siberiana-network
 
-  minio:
+  heritage_minio:
     container_name: heritage_minio
     build:
       context: .
       dockerfile: ./docker/Dockerfile.minio
     ports:
-      - 9000:9000
-      - 9001:9001
+      - 9000
+      - 9001
     environment:
       - MINIO_ROOT_USER=${MINIO_ROOT_USER}
       - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+      - MINIO_SERVER_URL=${MINIO_SERVER_URL}
+      - MINIO_SERVER_REDIRECT_URL=${MINIO_SERVER_REDIRECT_URL}
     volumes:
       - ./minio:/data
     command: server --console-address :9001 /data
@@ -81,8 +83,8 @@ services:
       - siberiana-network
 
 volumes:
-  cache:
-  pg_data:
+  heritage_cache:
+  heritage_data:
   minio:
 
 networks:
