(fix): add missing env vars to docker-compose.yml for graphql service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,17 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_SSL_MODE: ${POSTGRES_SSL_MODE}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      MINIO_ENDPOINT: ${MINIO_ENDPOINT}
+      MINIO_PORT: ${MINIO_PORT}
+      MINIO_ACCESS_KEY_ID: ${MINIO_ACCESS_KEY_ID}
+      MINIO_SECRET_ACCESS_KEY: ${MINIO_SECRET_ACCESS_KEY}
+      MINIO_USE_SSL: ${MINIO_USE_SSL}
       OIDC_USERINFO_ENDPOINT: ${OIDC_USERINFO_ENDPOINT}
+      STORAGE_BASE_URL: ${STORAGE_BASE_URL}
+      STORAGE_DEFAULT_BUCKET: ${STORAGE_DEFAULT_BUCKET}
     depends_on:
       - heritage_postgres
       - heritage_redis
