(feat): remove storage_base_url, change storage_default_bucket to minio_default_bucket

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,8 @@ services:
       MINIO_ACCESS_KEY_ID: ${MINIO_ACCESS_KEY_ID}
       MINIO_SECRET_ACCESS_KEY: ${MINIO_SECRET_ACCESS_KEY}
       MINIO_USE_SSL: ${MINIO_USE_SSL}
+      MINIO_DEFAULT_BUCKET: ${MINIO_DEFAULT_BUCKET}
       OIDC_USERINFO_ENDPOINT: ${OIDC_USERINFO_ENDPOINT}
-      STORAGE_BASE_URL: ${STORAGE_BASE_URL}
-      STORAGE_DEFAULT_BUCKET: ${STORAGE_DEFAULT_BUCKET}
     depends_on:
       - heritage_postgres
       - heritage_redis
