--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,7 @@ MINIO_PORT=
 MINIO_ACCESS_KEY_ID=
 MINIO_SECRET_ACCESS_KEY=
 MINIO_USE_SSL=
+MINIO_DEFAULT_BUCKET=
 
 OIDC_USERINFO_ENDPOINT=
 
-STORAGE_BASE_URL=
-STORAGE_DEFAULT_BUCKET=
