--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -14,4 +14,5 @@ tasks:
       - bin/http
   install:
     - go install github.com/go-task/task/v3/cmd/task@latest
+    - go install entgo.io/ent/cmd/ent@latest
     - go mod tidy
