--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 # Dependency directories (remove the comment below to include it)
 vendor/
 
+# A collection of extensions and tools for ent.
+ent/contrib
+
 # Go workspace file
 go.work
 
