--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ REDIS_PASSWORD=
 MINIO_SERVER_URL=
 MINIO_ENDPOINT=
 MINIO_PORT=
-MINIO_ACCESS_KEY_ID=
-MINIO_SECRET_ACCESS_KEY=
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
 MINIO_USE_SSL=
 MINIO_DEFAULT_BUCKET=
 
