--- a/internal/gql/gqlgen.yml
+++ b/internal/gql/gqlgen.yml
@@ -35,6 +35,7 @@ autobind:
   - github.com/dkrasnovdev/siberiana-api/ent/monument
   - github.com/dkrasnovdev/siberiana-api/ent/organization
   - github.com/dkrasnovdev/siberiana-api/ent/period
+  - github.com/dkrasnovdev/siberiana-api/ent/periodical
   - github.com/dkrasnovdev/siberiana-api/ent/person
   - github.com/dkrasnovdev/siberiana-api/ent/personal
   - github.com/dkrasnovdev/siberiana-api/ent/project
