--- a/internal/gql/gqlgen.yml
+++ b/internal/gql/gqlgen.yml
@@ -26,6 +26,7 @@ autobind:
   - github.com/dkrasnovdev/siberiana-api/ent/collection
   - github.com/dkrasnovdev/siberiana-api/ent/culture
   - github.com/dkrasnovdev/siberiana-api/ent/district
+  - github.com/dkrasnovdev/siberiana-api/ent/ethnos
   - github.com/dkrasnovdev/siberiana-api/ent/favourite
   - github.com/dkrasnovdev/siberiana-api/ent/keyword
   - github.com/dkrasnovdev/siberiana-api/ent/license
