--- a/docker/Dockerfile.postgres
+++ b/docker/Dockerfile.postgres
@@ -1,5 +1,5 @@
-FROM postgres:latest
+FROM postgres:15
 
-RUN apt-get update && apt-get install -y postgresql-16-postgis-3
+RUN apt-get update && apt-get install -y postgresql-15-postgis-3
 
 CMD ["/usr/local/bin/docker-entrypoint.sh","postgres"]
